--- a/app/src/main/res/layout/fragment_course.xml
+++ b/app/src/main/res/layout/fragment_course.xml
@@ -58,6 +58,7 @@
             android:id="@+id/cb_instructor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:layout_weight="1" />
     </LinearLayout>
 
