--- a/app/src/main/res/layout/fragment_instructor.xml
+++ b/app/src/main/res/layout/fragment_instructor.xml
@@ -7,7 +7,7 @@
 
 
     <EditText
-        android:id="@+id/txt_stu_name"
+        android:id="@+id/txt_ins_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -36,36 +36,6 @@
             android:layout_weight="1"
             android:entries="@array/array_title" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/assigned_course_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="6dp">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="Course:"
-            android:textSize="18sp" />
-
-        <Spinner
-            android:id="@+id/cb_course"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/btn_assign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="Assign" />
     </LinearLayout>
 
     <LinearLayout
