--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -41,6 +41,7 @@
             android:id="@+id/cb_course"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="1" />
 
